Fix misaligned results

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ h1 {
 	color: white;
 	text-align: center;
 	grid-column: 3;
-	background-color: var(--preview-col-bg);
+	background-color: white;
 }
 
 /**********************************************************/
@@ -351,7 +351,7 @@ h1 {
     position: relative;
 	display: grid;
 	/*grid-template-columns: 2fr repeat(2, 1fr);*/
-    grid-template-columns: 1fr repeat(3, 7fr) 1fr;
+    grid-template-columns: 1fr repeat(3, 7fr) 2fr;
 	height: 45px;
     line-height: 30px;
     align-items: center;
@@ -377,7 +377,8 @@ h1 {
 }
 
 .file-dots {
-    justify-self: center;
+    justify-self: right;
+    margin-right: 10px;
     width: 15px;
     color: #adadad;
 }
@@ -479,7 +480,7 @@ h1 {
 #results-headers {
     line-height: 2em;
 	display: grid;
-	grid-template-columns:  1fr repeat(3, 7fr) 1fr;
+	grid-template-columns:  1fr repeat(3, 7fr) 2fr;
 }
 
 #control-icons {
